--- a/symfony-project/templates/base.html.twig
+++ b/symfony-project/templates/base.html.twig
@@ -43,7 +43,7 @@
 						<div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
 							<ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
 								<li class="active">
-									<a class="font-weight-bold" href="{{path('app_developer')}}">Accueil</a>
+									<a href="{{path('app_developer')}}">Accueil</a>
 								</li>
 								<li>
 									<a href="{{path('app_offre')}}">Offres</a>
@@ -86,8 +86,6 @@
 												<a class="text-black text-bold" style="cursor:pointer;" href="{{path('app_inscription')}}">Inscription</a>
 											</li>
 										{% endif %}
-
-
 									</ul>
 								</li>
 							</ul>
