--- a/symfony-project/templates/favori/index.html.twig
+++ b/symfony-project/templates/favori/index.html.twig
@@ -1,197 +1,42 @@
-<!DOCTYPE html>
-<html lang="fr">
+{% extends 'navbarDev.html.twig' %}
+{% block title %}Match
+{% endblock %}
 
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="author" content="Untree.co">
-		<link rel="shortcut icon" href="https://cdn0.iconfinder.com/data/icons/job-seeker/256/choose_job_seeker_employee_unemployee_work-512.png">
+{% block body %}
 
-		<meta name="description" content=""/>
-		<meta name="keywords" content="Boostrap"/>
-
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
-
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/owl.carousel.min.css">
-		<link rel="stylesheet" href="css/owl.theme.default.min.css">
-		<link rel="stylesheet" href="fonts/icomoon/style.css">
-		<link rel="stylesheet" href="fonts/feather/style.css">
-		<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-		<link rel="stylesheet" href="css/jquery.fancybox.min.css">
-		<link rel="stylesheet" href="css/aos.css">
-		<link rel="stylesheet" href="css/style.css">
-		<title>Vos favoris - AdopteUnDev</title>
-	</head>
-
-	<body>
-		<div class="container" style="margin-bottom:5rem;width:100vw">
-			<nav class="site-nav min-vw-100">
-				<div class="logo">
-					<a class="text-black">AdopteUnDev<span class="font-weight-bold">.</span>
-					</a>
-				</div>
-				<div class="row align-items-center">
-					<div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
-						<ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
-							<li>
-								<a class="text-black" href="{{path('app_developer')}}">Accueil</a>
-							</li>
-							<li class="active">
-								<a class="text-black" href="{{path('app_offre')}}">Offres</a>
-							</li>
-							<li class="active">
-								<a class="text-black" href="{{path('app_matching')}}">Matching</a>
-							</li>
-							<li>
-								<a class="text-black" href="{{ path('app_notifications') }}">
-									Notifications
-									<span class="icon-notifications"></span>
-								</a>
-							</li>
-							<li>
-								<a class="text-black font-weight-bold" href="{{path('app_favori')}}">Favoris</a>
-							</li>
-							<li class="has-children">
-								<a href="#" class="text-black">Mon compte</a>
-								<ul class="dropdown">
-									<li>
-										<a class="text-black" style="cursor:pointer;" href="{{path('app_developer_login')}}">Connexion</a>
-									</li>
-									<li>
-										<a class="text-black" style="cursor:pointer;" href="{{path('app_inscription')}}">Inscription</a>
-									</li>
-								</ul>
-							</li>
-						</ul>
-
-					</div>
-
-				</div>
-			</nav>
-		</div>
-
-		<div class="site-section bg-light d-flex min-vh-100">
+	<div class="site-section bg-light d-flex min-vh-100">
+		<div class="container">
+			<div class="row">
+				<h2 class="font-weight-bold text-center text-primary">Vos favoris</h2>
+			</div>
 			<div class="container">
 				<div class="row">
-					<h2 class="font-weight-bold text-center text-primary">Vos favoris</h2>
-				</div>
-				<div class="container">
-					<div class="row">
-						{% for fiche in fiches_de_poste %}
-							<div class="col-md-6 col-lg-4 mb-4">
-								<div class="card">
-									<div class="card-body">
-										<h5 class="card-title">{{ fiche.titre }}</h5>
-										<p class="card-text">Entreprise :
-											{# {{ fiche.entreprise.nom }}</p> #}
-										<p class="card-text">Localisation :
-											{{ fiche.localisation }}</p>
-										<a href="{{ path('app_favori_remove', { 'id': fiche.id }) }}" class="btn btn-danger">Supprimer</a>
-										<a href="{{ path('app_detail', {'id': fiche.id}) }}" class="btn btn-success btn-sm">Voir l'offre</a>
-									</div>
+					{% for fiche in fiches_de_poste %}
+						<div class="col-md-6 col-lg-4 mb-4">
+							<div class="card">
+								<div class="card-body">
+									<h5 class="card-title">{{ fiche.titre }}</h5>
+									<p class="card-text">Entreprise :
+										{# {{ fiche.entreprise.nom }}</p> #}
+									</p>
+									<p class="card-text">Localisation :
+										{{ fiche.localisation }}</p>
+									<a href="{{ path('app_favori_remove', { 'id': fiche.id }) }}" class="btn btn-danger">Supprimer</a>
+									<a href="{{ path('app_detail', {'id': fiche.id}) }}" class="btn btn-success btn-sm">Voir l'offre</a>
 								</div>
 							</div>
-						{% else %}
-							<div class="container">
+						</div>
+					{% else %}
+						<div class="container">
 
-								<li class="list-group-item text-center">
-									Aucun favori ajouté pour l'instant
-								</li>
-							</div>
-						{% endfor %}
-					</div>
+							<li class="list-group-item text-center">
+								Aucun favori ajouté pour l'instant
+							</li>
+						</div>
+					{% endfor %}
 				</div>
 			</div>
 		</div>
+	</div>
 
-		<div class="site-footer text-white">
-			<div class="container">
-				<div class="row justify-content-between">
-					<div class="col-lg-4">
-						<div class="widget">
-							<h3>À propos</h3>
-							<p class="text-black">AdopteUnDev transforme les idées en solutions numériques extraordinaires en connectant développeurs et entreprises pour un écosystème innovant et collaboratif.</p>
-						</div>
-						<div class="widget">
-							<h3>Connectez-vous avec nous</h3>
-							<ul class="social list-unstyled">
-								<li>
-									<a href="{{path('app_offre')}}">
-										<span class="icon-facebook"></span>
-									</a>
-								</li>
-								<li>
-									<a href="{{path('app_offre')}}">
-										<span class="icon-twitter"></span>
-									</a>
-								</li>
-								<li>
-									<a href="{{path('app_offre')}}">
-										<span class="icon-instagram"></span>
-									</a>
-								</li>
-								<li>
-									<a href="{{path('app_offre')}}">
-										<span class="icon-linkedin"></span>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-lg-6">
-						<div class="row">
-							<div class="col-12">
-								<div class="widget">
-									<h3>Navigation</h3>
-								</div>
-							</div>
-							<div class="col-6 col-sm-6 col-md-4">
-								<div class="widget">
-									<ul class="links list-unstyled">
-										<li>
-											<a href="{{path('app_offre')}}">Accueil</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Offres</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Matching</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Favoris</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Contact</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-							<div class="col-6 col-sm-6 col-md-4">
-								<div class="widget">
-									<ul class="links list-unstyled">
-										<li>
-											<a href="{{path('app_offre')}}">À propos de nous</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Politique de confidentialité</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">FAQ</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Carrières</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Support</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</body>
-</html>
+{% endblock %}
