--- a/symfony-project/templates/matching/match.html.twig
+++ b/symfony-project/templates/matching/match.html.twig
@@ -1,30 +1,8 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="author" content="Untree.co">
-		<link rel="shortcut icon" href="https://cdn0.iconfinder.com/data/icons/job-seeker/256/choose_job_seeker_employee_unemployee_work-512.png">
+{% extends 'navbarDev.html.twig' %}
+{% block title %}Match
+{% endblock %}
 
-		<meta name="description" content=""/>
-		<meta name="keywords" content="Boostrap"/>
-
-
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
-
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/owl.carousel.min.css">
-		<link rel="stylesheet" href="css/owl.theme.default.min.css">
-		<link rel="stylesheet" href="fonts/icomoon/style.css">
-		<link rel="stylesheet" href="fonts/feather/style.css">
-		<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-		<link rel="stylesheet" href="css/jquery.fancybox.min.css">
-		<link rel="stylesheet" href="css/aos.css">
-		<link rel="stylesheet" href="css/style.css">
-
-		<title>AdopteUnDev</title>
-	</head>
-
+{% block body %}
 	<style>
 		.search-bar {
 			display: flex;
@@ -56,287 +34,241 @@
 		}
 	</style>
 
-	<body>
-		<div class="container w-100" style="margin-bottom:5rem;width:100vw">
-			<nav class="site-nav" style="width:100vw;">
-				<div class="logo">
-					<a class="text-black text-bold">AdopteUnDev<span class="text-black text-bold">.</span>
-					</a>
-				</div>
-				<div class="row align-items-center">
-
-					<div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
-						<ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
-							<li>
-								<a class="text-black text-bold" href="{{path('app_developer')}}">Accueil</a>
-							</li>
-							<li class="active">
-								<a class="text-black text-bold" href="{{path('app_offre')}}">Offres</a>
-							</li>
-							<li class="active">
-								<a class="text-black text-bold" href="{{path('app_matching')}}">Matching</a>
-							</li>
-							<li>
-								<a class="text-black text-bold" href="{{path('app_favori')}}">Favoris</a>
-							</li>
-							<li>
-								<a class="text-black text-bold" href="">
-									<span class="fa fa-user"></span>
-									Mon compte
-								</a>
-							</li>
-						</ul>
-
-					</div>
-
-				</div>
-			</nav>
-			<!-- END nav -->
-
-		</div>
-		<!-- END container -->
-
-
-		<div class="section-grey bg-light" style="display:flex; flex-direction:column; justify-content:center; align-items:center; width:100vw ; padding:3rem;">
-			<div class="col-lg-6 text-center">
-				<h4 class="font-weight-bold">Vous pourrez matcher avec ces entreprises</h4>
-				<p class="text-black mb-4" data-aos="fade-up" data-aos-delay="100">Votre avenir se trouve peut-être là !</p>
-			</div>
-
-			<div class="row">
-
-
-				<div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
-					<div class="blog_entry">
-						<a href="{{path('match')}}"><img src="images/img_h_3-min.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid"></a>
-						<div class="p-4 bg-white">
-							<h3>
-								<a href="{{path('match')}}">Far far away, behind the word mountains</a>
-							</h3>
-							<span class="date">April 25, 2019</span>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-							<p class="more">
-								<a href="{{path('match')}}">Continue reading...</a>
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
-					<div class="blog_entry">
-						<a href="{{path('match')}}"><img src="images/img_h_5-min.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid"></a>
-						<div class="p-4 bg-white">
-							<h3>
-								<a href="{{path('match')}}">Far far away, behind the word mountains</a>
-							</h3>
-							<span class="date">April 25, 2019</span>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-							<p class="more">
-								<a href="{{path('match')}}">Continue reading...</a>
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
-					<div class="blog_entry">
-						<a href="{{path('match')}}"><img src="images/img_h_7-min.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid"></a>
-						<div class="p-4 bg-white">
-							<h3>
-								<a href="{{path('match')}}">Far far away, behind the word mountains</a>
-							</h3>
-							<span class="date">April 25, 2019</span>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-							<p class="more">
-								<a href="{{path('match')}}">Continue reading...</a>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-
-
-				<div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
-					<div class="blog_entry">
-						<a href="{{path('match')}}"><img src="images/img_h_3-min.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid"></a>
-						<div class="p-4 bg-white">
-							<h3>
-								<a href="{{path('match')}}">Far far away, behind the word mountains</a>
-							</h3>
-							<span class="date">April 25, 2019</span>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-							<p class="more">
-								<a href="{{path('match')}}">Continue reading...</a>
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
-					<div class="blog_entry">
-						<a href="{{path('app_offre')}}"><img src="images/img_h_5-min.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid"></a>
-						<div class="p-4 bg-white">
-							<h3>
-								<a href="{{path('app_offre')}}">Far far away, behind the word mountains</a>
-							</h3>
-							<span class="date">April 25, 2019</span>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-							<p class="more">
-								<a href="{{path('app_offre')}}">Continue reading...</a>
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
-					<div class="blog_entry">
-						<a href="{{path('app_offre')}}"><img src="images/img_h_7-min.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid"></a>
-						<div class="p-4 bg-white">
-							<h3>
-								<a href="{{path('app_offre')}}">Far far away, behind the word mountains</a>
-							</h3>
-							<span class="date">April 25, 2019</span>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-							<p class="more">
-								<a href="{{path('app_offre')}}">Continue reading...</a>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-
+	<div class="section-grey bg-light" style="display:flex; flex-direction:column; justify-content:center; align-items:center; width:100vw ; padding:3rem;">
+		<div class="col-lg-6 text-center">
+			<h4 class="font-weight-bold">Vous pourrez matcher avec ces entreprises</h4>
+			<p class="text-black mb-4" data-aos="fade-up" data-aos-delay="100">Votre avenir se trouve peut-être là !</p>
 		</div>
 
+		<div class="row">
 
-		<div class="site-footer text-white">
-			<div class="container">
-				<div class="row justify-content-between">
-					<div class="col-lg-4">
-						<div class="widget">
-							<h3>À propos</h3>
-							<p class="text-black">
-								AdopteUnDev, la plateforme qui connecte développeurs talentueux et entreprises ambitieuses pour un matching parfait. Rejoignez-nous pour construire un avenir numérique collaboratif !
-							</p>
-						</div>
-						<div class="widget">
-							<h3>Restez connecté</h3>
-							<ul class="social list-unstyled">
-								<li>
-									<a href="#">
-										<span class="icon-facebook"></span>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<span class="icon-twitter"></span>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<span class="icon-instagram"></span>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<span class="icon-linkedin"></span>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
 
-					<div class="col-lg-2">
-						<div class="widget">
-							<h3>Pour les développeurs</h3>
-							<ul class="links list-unstyled">
-								<li>
-									<a href="#">Nous rejoindre</a>
-								</li>
-								<li>
-									<a href="#">Créer un profil</a>
-								</li>
-								<li>
-									<a href="#">Nos offres</a>
-								</li>
-								<li>
-									<a href="#">Favoris</a>
-								</li>
-								<li>
-									<a href="#">Contact support</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-
-					<!-- Section Pour les entreprises -->
-					<div class="col-lg-2">
-						<div class="widget">
-							<h3>Pour les entreprises</h3>
-							<ul class="links list-unstyled">
-								<li>
-									<a href="#">Publier une offre</a>
-								</li>
-								<li>
-									<a href="#">Trouver un développeur</a>
-								</li>
-								<li>
-									<a href="#">Nos solutions</a>
-								</li>
-								<li>
-									<a href="#">Évaluer un développeur</a>
-								</li>
-								<li>
-									<a href="#">Assistance</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-
-					<!-- Section Légal -->
-					<div class="col-lg-2">
-						<div class="widget">
-							<h3>Légal</h3>
-							<ul class="links list-unstyled">
-								<li>
-									<a href="#">Mentions légales</a>
-								</li>
-								<li>
-									<a href="#">Politique de confidentialité</a>
-								</li>
-								<li>
-									<a href="#">Conditions générales</a>
-								</li>
-								<li>
-									<a href="#">Politique de cookies</a>
-								</li>
-								<li>
-									<a href="#">FAQ</a>
-								</li>
-							</ul>
-						</div>
+			<div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
+				<div class="blog_entry">
+					<a href="{{path('match')}}"><img src="images/img_h_3-min.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid"></a>
+					<div class="p-4 bg-white">
+						<h3>
+							<a href="{{path('match')}}">Far far away, behind the word mountains</a>
+						</h3>
+						<span class="date">April 25, 2019</span>
+						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+						<p class="more">
+							<a href="{{path('match')}}">Continue reading...</a>
+						</p>
 					</div>
 				</div>
+			</div>
 
-				<!-- Bas de page -->
-				<div class="row mt-4">
-					<div class="col-12 text-center">
-						<p class="mb-0">
-							Copyright © AdopteUnDev 2024 - Tous droits réservés.
-							<a href="#">Mentions légales</a>
-							|
-							<a href="#">Cookies</a>
-							|
-							<a href="#">Confidentialité</a>
+			<div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
+				<div class="blog_entry">
+					<a href="{{path('match')}}"><img src="images/img_h_5-min.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid"></a>
+					<div class="p-4 bg-white">
+						<h3>
+							<a href="{{path('match')}}">Far far away, behind the word mountains</a>
+						</h3>
+						<span class="date">April 25, 2019</span>
+						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+						<p class="more">
+							<a href="{{path('match')}}">Continue reading...</a>
+						</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
+				<div class="blog_entry">
+					<a href="{{path('match')}}"><img src="images/img_h_7-min.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid"></a>
+					<div class="p-4 bg-white">
+						<h3>
+							<a href="{{path('match')}}">Far far away, behind the word mountains</a>
+						</h3>
+						<span class="date">April 25, 2019</span>
+						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+						<p class="more">
+							<a href="{{path('match')}}">Continue reading...</a>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+
+
+			<div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
+				<div class="blog_entry">
+					<a href="{{path('match')}}"><img src="images/img_h_3-min.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid"></a>
+					<div class="p-4 bg-white">
+						<h3>
+							<a href="{{path('match')}}">Far far away, behind the word mountains</a>
+						</h3>
+						<span class="date">April 25, 2019</span>
+						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+						<p class="more">
+							<a href="{{path('match')}}">Continue reading...</a>
+						</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
+				<div class="blog_entry">
+					<a href="{{path('app_offre')}}"><img src="images/img_h_5-min.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid"></a>
+					<div class="p-4 bg-white">
+						<h3>
+							<a href="{{path('app_offre')}}">Far far away, behind the word mountains</a>
+						</h3>
+						<span class="date">April 25, 2019</span>
+						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+						<p class="more">
+							<a href="{{path('app_offre')}}">Continue reading...</a>
+						</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
+				<div class="blog_entry">
+					<a href="{{path('app_offre')}}"><img src="images/img_h_7-min.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid"></a>
+					<div class="p-4 bg-white">
+						<h3>
+							<a href="{{path('app_offre')}}">Far far away, behind the word mountains</a>
+						</h3>
+						<span class="date">April 25, 2019</span>
+						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+						<p class="more">
+							<a href="{{path('app_offre')}}">Continue reading...</a>
 						</p>
 					</div>
 				</div>
 			</div>
 		</div>
 
-	</body>
-</html></div><div id="overlayer"></div><div class="loader">
-<div class="spinner-border" role="status">
-	<span class="sr-only">Loading...</span>
+	</div>
 
-</div></div><script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script><script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script><script src="{{asset("js/popper.min.js")}}"></script><script src="{{asset("js/bootstrap.min.js")}}"></script><script src="{{asset("js/owl.carousel.min.js")}}"></script><script src="{{asset("js/aos.js")}}"></script><script src="{{asset("js/imagesloaded.pkgd.js")}}"></script><script src="{{asset("js/isotope.pkgd.min.js")}}"></script><script src="{{asset("js/jquery.animateNumber.min.js")}}"></script><script src="{{asset("js/jquery.stellar.min.js")}}"></script><script src="{{asset("js/jquery.waypoints.min.js")}}"></script><script src="{{asset("js/jquery.fancybox.min.js")}}"></script><script src="{{asset("js/custom.js")}}"></script></body></html>
+
+	<div class="site-footer text-white">
+		<div class="container">
+			<div class="row justify-content-between">
+				<div class="col-lg-4">
+					<div class="widget">
+						<h3>À propos</h3>
+						<p class="text-black">
+							AdopteUnDev, la plateforme qui connecte développeurs talentueux et entreprises ambitieuses pour un matching parfait. Rejoignez-nous pour construire un avenir numérique collaboratif !
+						</p>
+					</div>
+					<div class="widget">
+						<h3>Restez connecté</h3>
+						<ul class="social list-unstyled">
+							<li>
+								<a href="#">
+									<span class="icon-facebook"></span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<span class="icon-twitter"></span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<span class="icon-instagram"></span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<span class="icon-linkedin"></span>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="col-lg-2">
+					<div class="widget">
+						<h3>Pour les développeurs</h3>
+						<ul class="links list-unstyled">
+							<li>
+								<a href="#">Nous rejoindre</a>
+							</li>
+							<li>
+								<a href="#">Créer un profil</a>
+							</li>
+							<li>
+								<a href="#">Nos offres</a>
+							</li>
+							<li>
+								<a href="#">Favoris</a>
+							</li>
+							<li>
+								<a href="#">Contact support</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+
+				<!-- Section Pour les entreprises -->
+				<div class="col-lg-2">
+					<div class="widget">
+						<h3>Pour les entreprises</h3>
+						<ul class="links list-unstyled">
+							<li>
+								<a href="#">Publier une offre</a>
+							</li>
+							<li>
+								<a href="#">Trouver un développeur</a>
+							</li>
+							<li>
+								<a href="#">Nos solutions</a>
+							</li>
+							<li>
+								<a href="#">Évaluer un développeur</a>
+							</li>
+							<li>
+								<a href="#">Assistance</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+
+				<!-- Section Légal -->
+				<div class="col-lg-2">
+					<div class="widget">
+						<h3>Légal</h3>
+						<ul class="links list-unstyled">
+							<li>
+								<a href="#">Mentions légales</a>
+							</li>
+							<li>
+								<a href="#">Politique de confidentialité</a>
+							</li>
+							<li>
+								<a href="#">Conditions générales</a>
+							</li>
+							<li>
+								<a href="#">Politique de cookies</a>
+							</li>
+							<li>
+								<a href="#">FAQ</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+
+			<!-- Bas de page -->
+			<div class="row mt-4">
+				<div class="col-12 text-center">
+					<p class="mb-0">
+						Copyright © AdopteUnDev 2024 - Tous droits réservés.
+						<a href="#">Mentions légales</a>
+						|
+						<a href="#">Cookies</a>
+						|
+						<a href="#">Confidentialité</a>
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+{% endblock %}
