--- a/symfony-project/templates/navbarDev.html.twig
+++ b/symfony-project/templates/navbarDev.html.twig
@@ -57,7 +57,7 @@
 		}
 	</style>
 	<body>
-	
+
 		<div class="container w-100" style="margin-bottom:5rem;width:100vw">
 			<nav class="site-nav" style="width:100vw;">
 				<div class="logo">
@@ -69,32 +69,48 @@
 					<div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
 						<ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
 							<li>
-								<a class="text-black font-weight-bold" href="{{path('app_developer')}}">Accueil</a>
+								<a class="text-black" href="{{path('app_developer')}}">Accueil</a>
 							</li>
 							<li class="active">
+
+
 								<a class="text-black" href="{{path('app_offre')}}">Offres</a>
-							</li>
-							<li class="active">
-								<a class="text-black" href="{{path('app_matching')}}">Matching</a>
+
 							</li>
 							<li>
-								<a class="text-black" href="{{ path('app_notifications') }}">
-									Notifications
-									<span class="icon-notifications"></span>
-								</a>
+								{% if app.session.get('user_id') is not empty %}
+									<a class="text-black" href="{{path('app_matching')}}">Matching</a>
+								{% endif %}
+
 							</li>
 							<li>
-								<a class="text-black" href="{{path('app_favori')}}">Favoris</a>
+								{% if app.session.get('user_id') is not empty %}
+
+									<a class="text-black" href="{{ path('app_notifications') }}">
+										Notifications
+										<span class="icon-notifications"></span>
+									</a>
+								{% endif %}
+
 							</li>
 							<li class="has-children">
-								<a href="#" class="text-black">Mon compte</a>
+								<a class="text-black" href="#">Mon compte</a>
 								<ul class="dropdown">
-									<li>
-										<a class="text-black" style="cursor:pointer;" href="{{path('app_developer_login')}}">Connexion</a>
-									</li>
-									<li>
-										<a class="text-black" style="cursor:pointer;" href="{{path('app_inscription')}}">Inscription</a>
-									</li>
+									{% if app.session.get('user_id') is not empty %}
+										<li>
+											<a class="text-black" style="cursor:pointer;" href="{{path('app_dashboard')}}">Paramètres</a>
+										</li>
+										<li>
+											<a class="text-black" href="{{path('app_favori')}}">Favoris</a>
+										</li>
+									{% else %}
+										<li>
+											<a class="text-black text-bold" style="cursor:pointer;" href="{{path('app_developer_login')}}">Connexion</a>
+										</li>
+										<li>
+											<a class="text-black text-bold" style="cursor:pointer;" href="{{path('app_inscription')}}">Inscription</a>
+										</li>
+									{% endif %}
 								</ul>
 							</li>
 						</ul>
@@ -209,4 +225,4 @@
 </html></div><div id="overlayer"></div><div class="loader">
 <div class="spinner-border" role="status">
 	<span class="sr-only">Loading...</span>
-</div></div><script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script><script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script><script src="{{asset("js/popper.min.js")}}"></script><script src="{{asset("js/bootstrap.min.js")}}"></script><script src="{{asset("js/owl.carousel.min.js")}}"></script><script src="{{asset("js/aos.js")}}"></script><script src="{{asset("js/imagesloaded.pkgd.js")}}"></script><script src="{{asset("js/isotope.pkgd.min.js")}}"></script><script src="{{asset("js/jquery.animateNumber.min.js")}}"></script><script src="{{asset("js/jquery.stellar.min.js")}}"></script><script src="{{asset("js/jquery.waypoints.min.js")}}"></script><script src="{{asset("js/jquery.fancybox.min.js")}}"></script><script src="{{asset("js/custom.js")}}"></script></body></html>
+</div></div> <script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script> <script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script> <script src="{{asset("js/popper.min.js")}}"></script> <script src="{{asset("js/bootstrap.min.js")}}"></script> <script src="{{asset("js/owl.carousel.min.js")}}"></script> <script src="{{asset("js/aos.js")}}"></script> <script src="{{asset("js/imagesloaded.pkgd.js")}}"></script> <script src="{{asset("js/isotope.pkgd.min.js")}}"></script> <script src="{{asset("js/jquery.animateNumber.min.js")}}"></script> <script src="{{asset("js/jquery.stellar.min.js")}}"></script> <script src="{{asset("js/jquery.waypoints.min.js")}}"></script> <script src="{{asset("js/jquery.fancybox.min.js")}}"></script> <script src="{{asset("js/custom.js")}}"></script></body></html>
