--- a/symfony-project/templates/offre/index.html.twig
+++ b/symfony-project/templates/offre/index.html.twig
@@ -1,29 +1,8 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="author" content="Untree.co">
-		<link rel="shortcut icon" href="https://cdn0.iconfinder.com/data/icons/job-seeker/256/choose_job_seeker_employee_unemployee_work-512.png">
+{% extends 'navbarDev.html.twig' %}
+{% block title %}Dashboard Développeur
+{% endblock %}
 
-		<meta name="description" content=""/>
-		<meta name="keywords" content="Boostrap"/>
-
-
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
-
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/owl.carousel.min.css">
-		<link rel="stylesheet" href="css/owl.theme.default.min.css">
-		<link rel="stylesheet" href="fonts/icomoon/style.css">
-		<link rel="stylesheet" href="fonts/feather/style.css">
-		<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-		<link rel="stylesheet" href="css/jquery.fancybox.min.css">
-		<link rel="stylesheet" href="css/aos.css">
-		<link rel="stylesheet" href="css/style.css">
-
-		<title>AdopteUnDev</title>
-	</head>
+{% block body %}
 
 	<style>
 		.search-bar {
@@ -56,251 +35,89 @@
 		}
 	</style>
 
-	<body>
-		<div class="container w-100" style="margin-bottom:5rem;width:100vw">
-			<nav class="site-nav" style="width:100vw;">
-				<div class="logo">
-					<a class="text-black">AdopteUnDev<span class="text-black">.</span>
-					</a>
-				</div>
-				<div class="row align-items-center">
-
-					<div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
-						<ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
-							<li>
-								<a class="text-black" href="{{path('app_developer')}}">Accueil</a>
-							</li>
-							<li class="active">
-								<a class="text-black font-weight-bold" href="{{path('app_offre')}}">Offres</a>
-							</li>
-							<li class="active">
-								<a class="text-black" href="{{path('app_matching')}}">Matching</a>
-							</li>
-							<li>
-								<a class="text-black" href="{{ path('app_notifications') }}">
-									Notifications
-									<span class="icon-notifications"></span>
-								</a>
-							</li>
-							<li>
-								<a class="text-black" href="{{path('app_favori')}}">Favoris</a>
-							</li>
-							<li class="has-children">
-								<a href="#" class="text-black">Mon compte</a>
-								<ul class="dropdown">
-									<li>
-										<a class="text-black" style="cursor:pointer;" href="{{path('app_developer_login')}}">Connexion</a>
-									</li>
-									<li>
-										<a class="text-black" style="cursor:pointer;" href="{{path('app_inscription')}}">Inscription</a>
-									</li>
-								</ul>
-							</li>
-						</ul>
-
-					</div>
-
-				</div>
-			</nav>
-		</div>
-
-
-		<div class="site-section bg-light" id="blog-section">
-			<div class="container">
-				<div class="text-center mb-4">
-					<h4 class="font-weight-bold">Les offres</h4>
-					<p class="text-muted">Trouvez les entreprises correspondant à vos critères</p>
-				</div>
-
-				<form id="matchingForm" action="{{ path('app_search') }}" method="get" class="bg-white p-4 m-4 shadow-sm rounded">
-					<div class="row">
-						<div class="col-md-4 mb-3">
-							<label for="salary" class="form-label">Salaire minimum souhaité (€)</label>
-							<input type="number" id="salary" name="salary" class="form-control" placeholder="Ex : 40000">
-						</div>
-
-						<div class="col-md-4 mb-3">
-							<label for="location" class="form-label">Localisation</label>
-							<input type="text" id="location" name="location" class="form-control" placeholder="Ex : Paris, France">
-						</div>
-
-						<div class="col-md-4 mb-3">
-							<label for="experience" class="form-label">Niveau d'expérience</label>
-							<input type="number" id="experience" name="experience" class="form-control" min="1" max="5" placeholder="Ex : 3">
-						</div>
-					</div>
-
-					{# <div class="form-group mb-3">
-											<label for="languages" class="form-label">Langages ou technologies</label>
-											<select id="languages" name="languages[]" class="form-control" multiple>
-												<option value="python">Python</option>
-												<option value="javascript">JavaScript</option>
-												<option value="java">Java</option>
-												<option value="php">PHP</option>
-												<option value="csharp">C#</option>
-											</select>
-											<small class="form-text text-muted">Maintenez Ctrl ou Cmd pour sélectionner plusieurs options</small>
-										</div> #}
-
-					<div class="text-center">
-						<button type="submit" class="btn btn-primary">Trouver des entreprises</button>
-					</div>
-				</form>
-
-
+	<div class="site-section bg-light" id="blog-section">
+		<div class="container">
+			<div class="text-center mb-4">
+				<h4 class="font-weight-bold">Les offres</h4>
+				<p class="text-muted">Trouvez les entreprises correspondant à vos critères</p>
 			</div>
-			<div class="container mt-4">
-				<h2>Résultats de recherche</h2>
+
+			<form id="matchingForm" action="{{ path('app_search') }}" method="get" class="bg-white p-4 m-4 shadow-sm rounded">
 				<div class="row">
-					{% if fiches_de_poste|length > 0 %}
-						{% for fiche in fiches_de_poste %}
-							<div class="col-md-6 col-lg-4 mb-4">
-								<div class="card shadow-sm p-3">
-									<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-									<div class="card-body">
-										<h5 class="card-title">{{ fiche.titre }}</h5>
-										<p class="card-text">
-											<strong>Description :</strong>
-											{{ fiche.description }}<br>
-											<strong>Localisation :</strong>
-											{{ fiche.localisation }}<br>
-											<strong>Salaire proposé :</strong>
-											{{ fiche.salairePropose }}
-											€<br>
-											<strong>Niveau d'expérience :</strong>
-											{{ fiche.niveauExperience }}<br>
-											<strong>Technologies :</strong>
-											{{ fiche.technologies }}
-										</p>
-									</div>
-									<div class="ontainer">
-										<a href="{{ path('developer_add_fiche_favoris', { ficheId: fiche.id }) }}" class="btn btn-success">Ajouter favoris</a>
-										<a href="{{ path('app_detail', {'id': fiche.id}) }}" class="btn btn-primary btn-sm">Voir l'offre</a>
-									</div>
-								</div>
-							</div>
-						{% endfor %}
-					{% else %}
-						<li class="list-group-item text-center">
-							Aucun résultat trouvé pour ces critères.
-						</li>
-					{% endif %}
+					<div class="col-md-4 mb-3">
+						<label for="salary" class="form-label">Salaire minimum souhaité (€)</label>
+						<input type="number" id="salary" name="salary" class="form-control" placeholder="Ex : 40000">
+					</div>
+
+					<div class="col-md-4 mb-3">
+						<label for="location" class="form-label">Localisation</label>
+						<input type="text" id="location" name="location" class="form-control" placeholder="Ex : Paris, France">
+					</div>
+
+					<div class="col-md-4 mb-3">
+						<label for="experience" class="form-label">Niveau d'expérience</label>
+						<input type="number" id="experience" name="experience" class="form-control" min="1" max="5" placeholder="Ex : 3">
+					</div>
 				</div>
-			</div>
+
+				{# <div class="form-group mb-3">
+																									<label for="languages" class="form-label">Langages ou technologies</label>
+																									<select id="languages" name="languages[]" class="form-control" multiple>
+																										<option value="python">Python</option>
+																										<option value="javascript">JavaScript</option>
+																										<option value="java">Java</option>
+																										<option value="php">PHP</option>
+																										<option value="csharp">C#</option>
+																									</select>
+																									<small class="form-text text-muted">Maintenez Ctrl ou Cmd pour sélectionner plusieurs options</small>
+																								</div> #}
+
+				<div class="text-center">
+					<button type="submit" class="btn btn-primary">Trouver des entreprises</button>
+				</div>
+			</form>
+
 
 		</div>
-
-
-		<div class="site-footer text-white">
-			<div class="container">
-				<div class="row justify-content-between">
-					<div class="col-lg-4">
-						<div class="widget">
-							<h3>À propos</h3>
-							<p class="text-black">AdopteUnDev transforme les idées en solutions numériques extraordinaires en connectant développeurs et entreprises pour un écosystème innovant et collaboratif.</p>
-						</div>
-						<div class="widget">
-							<h3>Connectez-vous avec nous</h3>
-							<ul class="social list-unstyled">
-								<li>
-									<a href="{{path('app_offre')}}">
-										<span class="icon-facebook"></span>
-									</a>
-								</li>
-								<li>
-									<a href="{{path('app_offre')}}">
-										<span class="icon-twitter"></span>
-									</a>
-								</li>
-								<li>
-									<a href="{{path('app_offre')}}">
-										<span class="icon-instagram"></span>
-									</a>
-								</li>
-								<li>
-									<a href="{{path('app_offre')}}">
-										<span class="icon-linkedin"></span>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-lg-6">
-						<div class="row">
-							<div class="col-12">
-								<div class="widget">
-									<h3>Navigation</h3>
+		<div class="container mt-4">
+			<h2>Résultats de recherche</h2>
+			<div class="row">
+				{% if fiches_de_poste|length > 0 %}
+					{% for fiche in fiches_de_poste %}
+						<div class="col-md-6 col-lg-4 mb-4">
+							<div class="card shadow-sm p-3">
+								<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+								<div class="card-body">
+									<h5 class="card-title">{{ fiche.titre }}</h5>
+									<p class="card-text">
+										<strong>Description :</strong>
+										{{ fiche.description }}<br>
+										<strong>Localisation :</strong>
+										{{ fiche.localisation }}<br>
+										<strong>Salaire proposé :</strong>
+										{{ fiche.salairePropose }}
+										€<br>
+										<strong>Niveau d'expérience :</strong>
+										{{ fiche.niveauExperience }}<br>
+										<strong>Technologies :</strong>
+										{{ fiche.technologies }}
+									</p>
 								</div>
-							</div>
-							<div class="col-6 col-sm-6 col-md-4">
-								<div class="widget">
-									<ul class="links list-unstyled">
-										<li>
-											<a href="{{path('app_developer')}}">Accueil</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Offres</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Matching</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Favoris</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Contact</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-							<div class="col-6 col-sm-6 col-md-4">
-								<div class="widget">
-									<ul class="links list-unstyled">
-										<li>
-											<a href="{{path('app_offre')}}">À propos de nous</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Politique de confidentialité</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">FAQ</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Carrières</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Support</a>
-										</li>
-									</ul>
+								<div class="ontainer">
+									<a href="{{ path('developer_add_fiche_favoris', { ficheId: fiche.id }) }}" class="btn btn-success">Ajouter favoris</a>
+									<a href="{{ path('app_detail', {'id': fiche.id}) }}" class="btn btn-primary btn-sm">Voir l'offre</a>
 								</div>
 							</div>
 						</div>
-					</div>
-				</div>
-
-				<div class="text-center" copyright">
-					<div class="col-md-8">
-						<p>Copyright &copy;<script>
-								document.write(new Date().getFullYear());
-							</script>. Tous droits réservés.
-							<a href="{{path('app_offre')}}"></a>
-						</p>
-
-					</div>
-				</div>
+					{% endfor %}
+				{% else %}
+					<li class="list-group-item text-center">
+						Aucun résultat trouvé pour ces critères.
+					</li>
+				{% endif %}
 			</div>
 		</div>
 
+	</div>
 
-	</body>
-</html></div><div id="overlayer"></div><div class="loader">
-<div class="spinner-border" role="status">
-	<span class="sr-only">Loading...</span>
-
-</div></div><script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script><script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script><script src="{{asset("js/popper.min.js")}}"></script><script src="{{asset("js/bootstrap.min.js")}}"></script><script src="{{asset("js/owl.carousel.min.js")}}"></script><script src="{{asset("js/aos.js")}}"></script><script src="{{asset("js/imagesloaded.pkgd.js")}}"></script><script src="{{asset("js/isotope.pkgd.min.js")}}">
-<script src="{{asset("js/search.js")}}"></script>
-<script src="{{asset("js/jquery.animateNumber.min.js")}}"></script>
-<script src="{{asset("js/jquery.stellar.min.js")}}"></script>
-<script src="{{asset("js/jquery.waypoints.min.js")}}"></script>
-<script src="{{asset("js/jquery.fancybox.min.js")}}"></script>
-<script src="{{asset("js/custom.js")}}"></script></body></html>
+{% endblock %}
